// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-1"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-6 MuiGrid-container css-1ca7zd9-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-8 MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-178u6cx-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-2 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1r9rzg6-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-gq5jh7-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-9"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-14 MuiGrid-container css-1ca7zd9-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-16 MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-v1zrkh-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-10 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1w85r6d-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-q8ru1j-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-17"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-22 MuiGrid-container css-1ca7zd9-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-24 MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1gsoat4-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-18 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-bdrn9d-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1m9ygoa-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
